[gd_scene load_steps=5 format=3 uid="uid://bd08pg1n5dry2"]

[ext_resource type="Texture2D" uid="uid://b2sxqo5i4wjv7" path="res://sprites/VoidTarget.png" id="1_6b1rb"]
[ext_resource type="Shape2D" uid="uid://dvmfpegwreils" path="res://colliders/VoidTarget.tres" id="2_wtj66"]
[ext_resource type="Script" path="res://Scripts/entity-components/HitboxComponent.gd" id="3_nd1bm"]
[ext_resource type="Script" path="res://Scripts/entity-components/HealthComponent.gd" id="4_tialj"]

[node name="Target" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 2

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(3, 3)
texture = ExtResource("1_6b1rb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = ExtResource("2_wtj66")

[node name="HitboxComponent" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2
script = ExtResource("3_nd1bm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = ExtResource("2_wtj66")

[node name="HealthComponent" type="Node2D" parent="."]
script = ExtResource("4_tialj")
maxHealth = 1

[connection signal="damageTaken" from="HitboxComponent" to="HealthComponent" method="takeDamage"]
